# iot-plug-and-play-bridge

./: .gitignore  .gitmodules  LICENSE  LICENSE.txt  README.md  SECURITY.md  azure-pipelines.yml  readme.md  test.txt
PnpBridge/: CMakeLists.txt  ReadMe.md
PnpBridge/docs/: ModbusAdapter.md
PnpBridge/docs/schemas/: Co2Detector.interface.json  modbusGateway.interface.json
PnpBridge/scripts/: build.pnpbridge.cmd  build.prereq.cmd
PnpBridge/src/: CMakeLists.txt
PnpBridge/src/PnpBridge/: AzureIotApis.cpp  CMakeLists.txt  ConfigurationParser.c  ConfigurationParser.h  CoreDeviceHealth.c  CoreDeviceManagement.h  DiscoveryAdapterInterface.h  DiscoveryInterface.h  DiscoveryManager.c  DiscoveryManager.h  IotHubComms.c  IotHubComms.h  PnpAdapterInterface.h  PnpAdapterManager.h  PnpAdapterManger.c  PnpBridge.c  PnpBridge.h  PnpBridge.vcxproj  PnpBridge.vcxproj.filters  PnpBridgeCommon.h  PnpBridgeService.c  PnpBridgeh.h  ReadMe.txt  SamplePnpInteface.c  SerialDevice.c  SerialEdgeProcessing.c  WindowsPnPDeviceDiscovery.c  WindowsPnpDeviceDiscovery.h  common.h  config.json  utility.c
PnpBridge/src/PnpBridge/Adapters/: AdapterManifest.c  CmdAndPropHandler.h  DiscoveryAdapterManifest.h
PnpBridge/src/PnpBridge/Adapters/Camera/: CameraCaptureEngine.cpp  CameraCaptureEngine.h  CameraIotPnpAPIs.cpp  CameraIotPnpAPIs.h  CameraIotPnpDevice.cpp  CameraIotPnpDevice.h  CameraPnpDiscovery.cpp  CameraPnpDiscovery.h  CameraStatConsumer.cpp  CameraStatConsumer.h  JsonWrapper.cpp  JsonWrapper.h  iot_pnp_apis.cpp  iot_pnp_apis.h  pch.h  readme.md
PnpBridge/src/PnpBridge/Adapters/CoreDeviceHealth/: CoreDeviceHealth.c  CoreDeviceHealth.h  CoreDeviceManagement.h  WindowsPnPDeviceDiscovery.c  WindowsPnpDeviceDiscovery.h
PnpBridge/src/PnpBridge/Adapters/ModbusPnp/: CmdPropHandlers.h  ModbusCapability.c  ModbusCapability.h  ModbusEnum.h  ModbusPnp.c  ModbusPnp.h
PnpBridge/src/PnpBridge/Adapters/Serial/: SerialDevice.c
PnpBridge/src/PnpBridge/Adapters/SerialPnp/: CmdAndPropHandler.h  SerialPnp.c  SerialPnp.h
PnpBridge/src/PnpBridge/core/: PnpAdapterInterface.c  PnpBridgeMemory.c  PnpBridgeMemory.h
PnpBridge/src/tests/: CMakeLists.txt
PnpBridge/src/tests/pnp_adapter_manager/: CMakeLists.txt  main.c  pnp_adapter_manager_ut.c
pnpbridge/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.amd64.debug  Dockerfile.arm32v7  Dockerfile.arm64v8  ReadMe.md  ReadMe.md.txt  deployment.debug.template.json  deployment.template.json  module.json  quickstart.md
pnpbridge/docs/: author_adapter.md  bluetooth_sensor_adapter.md  build_deploy.md  configuration.md  coredevicehealth_adapter.md  discovery_adapters.md  modbus_adapters.md  mqtt_adapter.md  pnpbridge.md  pnpmessage.md  quick_start.md
pnpbridge/docs/schemas/: CO2SensorInline.capabilitymodel.json  CO2SensorInlineModelDefinition.json  CameraModelDefinition.json  Co2Detector.interface.json  Co2DetectorModelDefinition.json  DeviceInfo.json  EnvironmentalSensor.json  EnvironmentalSensorInline.capabilitymodel.json  EnvironmentalSensorInlineModelDefinition.json  RootPnpBridgeInterfaceModel.json  camera.interface.json  config-modbus.json  example-config-modbus.json  grovearduinoserialpnpModel.json  modbusGateway.interface.json  mqtt_intel_rsp.json
pnpbridge/jenkins/: raspberrypi_c.sh
pnpbridge/scripts/linux/: build.sh  setup.sh
pnpbridge/scripts/linux/targets/impinj/: build-r700.sh
pnpbridge/scripts/windows/: build.cmd
pnpbridge/src/: CMakeLists.txt
pnpbridge/src/adapters/: CMakeLists.txt
pnpbridge/src/adapters/samples/: CMakeLists.txt
pnpbridge/src/adapters/samples/environmental_sensor/: CMakeLists.txt  adapter_manifest_pnpbridge.c  config.json  environmental_sensor.c  environmental_sensor.h  environmental_sensor_pnpbridge.c  environmental_sensor_pnpbridge.h  environmental_sensor_pnpbridge_discovery.c
pnpbridge/src/adapters/src/: CMakeLists.txt
pnpbridge/src/adapters/src/Camera/: CMakeLists.txt  CameraCaptureEngine.cpp  CameraCaptureEngine.h  CameraCaptureEngineCallbacks.cpp  CameraCaptureEngineCallbacks.h  CameraIotPnpAPIs.cpp  CameraIotPnpAPIs.h  CameraIotPnpDevice.cpp  CameraIotPnpDevice.h  CameraIotPnpDeviceAdapter.cpp  CameraIotPnpDeviceAdapter.h  CameraMediaCapture.cpp  CameraMediaCapture.h  CameraPnPBridgeInterface.cpp  CameraPnPBridgeInterface.h  CameraPnpDiscovery.cpp  CameraPnpDiscovery.h  CameraStatConsumer.cpp  CameraStatConsumer.h  JsonWrapper.cpp  JsonWrapper.h  NetworkCameraIotPnpDevice.cpp  NetworkCameraIotPnpDevice.h  pch.h  readme.md  util.cpp  util.h
pnpbridge/src/adapters/src/bluetooth_sensor/: BluetoothSensorDeviceAdapter.cpp  BluetoothSensorDeviceAdapter.h  BluetoothSensorDeviceAdapterBase.cpp  BluetoothSensorDeviceAdapterBase.h  BluetoothSensorDeviceAdapterWin.cpp  BluetoothSensorDeviceAdapterWin.h  BluetoothSensorDiscovery.cpp  BluetoothSensorDiscovery.h  BluetoothSensorDiscoveryAdapter.cpp  BluetoothSensorDiscoveryAdapter.h  BluetoothSensorDiscoveryAdapterWin.cpp  BluetoothSensorDiscoveryAdapterWin.h  BluetoothSensorPnPBridgeInterface.cpp  BluetoothSensorPnPBridgeInterface.h  (+4 more)
pnpbridge/src/pnpbridge/: CMakeLists.txt
pnpbridge/src/pnpbridge/common/: pnp_bridge_client.h  pnp_device_client.c  pnp_device_client.h  pnp_device_client_helpers.c  pnp_device_client_helpers.h  pnp_device_client_ll.c  pnp_device_client_ll.h  pnp_dps.c  pnp_dps.h  pnp_dps_ll.c  pnp_dps_ll.h  pnp_protocol.c  pnp_protocol.h  pnp_protocol_helpers.c  pnp_protocol_helpers.h  readme.md
pnpbridge/src/pnpbridge/inc/: common.h  configuration_parser.h  discoveryadapter_api.h  discoveryadapter_manager.h  iothub_comms.h  nosal.h  pnpadapter_api.h  pnpadapter_manager.h  pnpadapter_manifest.h  pnpbridge.h  pnpbridge_common.h  pnpbridge_memory.h  pnpbridgeh.h  pnpmessage_api.h
pnpbridge/src/pnpbridge/module/: CMakeLists.txt  main.c
pnpbridge/src/pnpbridge/samples/: CMakeLists.txt
pnpbridge/src/pnpbridge/src/: configuration_parser.c  discoveryadapter_manager.c  iothub_comms.c  pnpadapter_api.c  pnpadapter_manager.c  pnpbridge.c  pnpbridge_config_schema.json  pnpbridge_memory.c  pnpmessage.c  utility.c
pnpbridge/src/pnpbridge/tests/: CMakeLists.txt
(+219 files in other folders)
